<resources>

    <!-- Welcome Page-->
    <string name="app_name">Trendify</string>
    <string name="welcome">Welcome To</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!--Home Page-->
    <string name="allProducts">All Products</string>
    <string name="category">Category</string>

    <!--Login Page-->
    <string name="loginhere">Login Here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Register Page-->
    <string name="registerhere">Register Here</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="repassword">Re-Enter Password</string>

    <!--Profile Page-->
    <string name="logout">Logout</string>
    <string name="orders">Orders</string>
    <string name="wishlist">Wish List</string>
    <string name="wallet">Wallet</string>

    <!-- Orders Page-->
    <string name="allorders">Orders History</string>

    <!-- Home-->
    <string name="slogan">Endless Choices, Effortless Shopping!</string>
    <string name="topselling">Top Selling Products</string>
    <string name="newarrivals">New Arrivals</string>

    <!-- Notifications-->
    <string name="notifications">Notifications</string>

    <!-- Order Details-->
    <string name="orderdetails">Order Details</string>
    <string name="trackingnumber">Tracking Number : </string>
    <string name="date">Date : </string>
    <string name="address">Shipping Address : </string>
    <string name="status">Status : </string>
    <string name="total">Total Price : </string>
    <string name="orderitems">Order Items : </string>
    <string name="prodcut">Product : </string>
    <string name="price">Price : </string>
    <string name="quantity">Quantity : </string>
    <string name="vendor">Vendor : </string>
    <string name="action">Action : </string>
    <string name="review">Add Review : </string>
</resources>